thesis: Use textsc for names

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -42,7 +42,7 @@
 
 \newglossaryentry{riscv}
 {
-    name={RISC-V},
+    name={\textsc{Risc-V}},
     % TODO: description
     description={}
 }
@@ -52,7 +52,7 @@
 \newacronym{isa}{ISA}{instruction set architecture}
 \newacronym[
     description={\gls{riscv} hardware thread}
-]{hart}{hart}{RISC-V hardware thread}
+]{hart}{hart}{\textsc{Risc-V} hardware thread}
 \newacronym{pc}{PC}{program counter register}
 \newacronym{lr}{LR}{link register}
 \newacronym{sp}{SP}{stack pointer register}
@@ -62,7 +62,7 @@
 \newacronym{os}{OS}{operating system}
 \newacronym{sbi}{SBI}{supervisor binary interface}
 \newacronym{see}{SEE}{supervisor execution environment}
-\newacronym{rsa}{RSA}{Rivest–Shamir–Adleman}
+\newacronym{rsa}{\textsc{Rsa}}{Rivest–Shamir–Adleman}
 \newacronym{nmi}{NMI}{non-maskable interrupt}
 \newacronym{alu}{ALU}{arithmetic logic unit}
 \newacronym{pma}{PMA}{phsyical memory attribute}
