thesis: Add background section about SPIN

--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -121,3 +121,12 @@
     month = {September},
     year = {2016}
 }
+
+@book{SpinManual,
+    title = {The Spin Model Checker: Primer and Reference Manual},
+    author = {Holzmann, Gerard J.},
+    address = {Boston},
+    publisher = {Addison-Wesley},
+    year = {2004},
+    isbn = {0-321-22862-6}
+}
