--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,7 +1,7 @@
 \documentclass{securem}
 \usepackage[a4paper]{geometry}
 \usepackage[utf8]{inputenc}
-\usepackage{enumitem}
+\usepackage[inline]{enumitem}
 \usepackage{csquotes}
 \usepackage{tikz}
 \usepackage[hidelinks]{hyperref}
@@ -44,6 +44,14 @@
 {
     name={\textsc{Risc-V}},
     % TODO: description
+    description={}
+}
+\newglossaryentry{spin}{
+    name={\textsc{Spin}},
+    description={}
+}
+\newglossaryentry{promela}{
+    name={\textsc{Promela}},
     description={}
 }
 
