--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -1,5 +1,4 @@
 \documentclass{securem}
-\usepackage[a4paper]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[inline]{enumitem}
 \usepackage{csquotes}
@@ -13,6 +12,7 @@
 \usepackage{multirow}
 \usepackage{multicol}
 \usepackage{bussproofs}
+\usepackage{adjustbox}
 \usetikzlibrary{positioning,calc,graphs,shapes,arrows}
 
 \setlength{\grammarindent}{8em}
